name:           VPAutomata
version:        0.1
cabal-version:  >=1.2
build-type:     Simple
author:         Kai

executable VPAutomata
  hs-source-dirs:  src
  main-is:         Main.hs
  build-depends:   
                  base >= 4,
                  gtk,
                  stm,
                  cairo,
                  glade
  ghc-options:     -Wall -fno-warn-unused-do-bind
  other-modules:   
                   Automata,
                   VPA,
                   VPT
  extensions:      
                   DoAndIfThenElse, 
                   UndecidableInstances

