name:           VPAutomata
version:        0.1
cabal-version:  >=1.2
build-type:     Simple
author:         Kai

executable VPAutomata
  hs-source-dirs:  src
  build-depends:   
                  base >= 4,
                  gtk,
                  stm,
                  cairo,
                  glade,
                  containers
  ghc-options:     -Wall -fno-warn-unused-do-bind
  other-modules:   
                   Automata,
                   VPT,
                   GUIAutomata,
                   GUIVPT,
                   Utils
  extensions:      
                   DoAndIfThenElse, 
                   ScopedTypeVariables, 
                   UndecidableInstances
  main-is:         Main.hs

